fixed height spacing

--- a/src/client/App.css
+++ b/src/client/App.css
@@ -74,7 +74,7 @@ a:hover{
 
 .activityFlexBox {
   flex: 0 0 calc(30% - 2vw); 
-  height: 50vh;
+  height: auto;
   border: solid navy 1vw;
   border-radius: 10px;
   margin: 1vw;
